--- a/index.html
+++ b/index.html
@@ -24,23 +24,17 @@
 
   </head>
   <body>
-       <!-- Top Bar-->
-       <nav class="fixed-top" id="mainNav">
-          <div class="container">
-            <a class="navbar" id= "top" href="#page-top">Who am I?</a>
-          </div>
-        </nav>
 
          <!-- scoreboard-->
          <div class="scoreboard">Score<br>
             <div class = "odometer" id = "scoreupdate"></div>
           </div>
-        
+
         <!-- Header -->
         <header class="masthead">
           <div class="container">
             <div class="intro-text">
-              <img class ="image_to_guess" id="imageGuess"src= "">
+              <img class ="col-lg-12 text-center image_to_guess" id="imageGuess"src= "">
               <div class="intro-lead-in" id="title_header">Can you guess the name of these cartoon characters?!</div>
               <a class="btn btn-primary btn-xl text-uppercase col-md-7" onclick=startGame() id = "startGame" href="#game">Start Playing</a>
             </div>
@@ -52,6 +46,7 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-12 text-center">
+              <p class="navbar" id= "top">Who am I?</a>
           </div>
         </div>
         <div class="row">
