--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <!-- For FB Twitter LinkedIn Icons-->
     <link href="assets/vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Indie+Flower" rel="stylesheet">
-
+    <link href="https://fonts.googleapis.com/css?family=Amatic+SC" rel="stylesheet">
     <!-- For Header-->
     <link href="https://fonts.googleapis.com/css?family=Cookie" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
@@ -26,7 +26,7 @@
   <body>
 
          <!-- scoreboard-->
-         <div class="scoreboard">Score<br>
+         <div class="scoreboard" id = "score2">Score<br>
             <div class = "odometer" id = "scoreupdate"></div>
           </div>
 
@@ -36,7 +36,7 @@
             <div class="intro-text">
               <img class ="col-lg-12 text-center image_to_guess" id="imageGuess"src= "">
               <div class="intro-lead-in" id="title_header">Can you guess the name of these cartoon characters?!</div>
-              <a class="btn btn-primary btn-xl text-uppercase col-md-7" onclick=startGame() id = "startGame" href="#game">Start Playing</a>
+              <a class="btn btn-primary btn-xl text-uppercase col-md-7" onclick=startGame() id = "startGame" >Start Playing</a>
             </div>
           </div>
         </header>
