--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-12 text-center">
-              <p class="navbar" id= "top">Who am I?</a>
+              <p class="soon" id= "top">Who am I?</a>
           </div>
         </div>
         <div class="row">
@@ -55,6 +55,8 @@
           <div class="col-lg-8 text-center">
             <h3 class="section-subheading text-muted result "><span id="updateScreen"><strong> </strong></span></h3>
             <h3 class="section-subheading text-muted errorDisplay"><span id="outputError"><strong></strong></span></h3>
+            <a id = "tai" class = "answeris" onclick=displayAnswer()>Give me the answer</a>
+
           </div>
         </div> 
       </div> 
